Sidebar scroll fixes (#498)
* Only scroll to active navigation item if it would be out of view

* Always show toggle sidebar button regardless of sidebar scroll position

--- a/frontend/css/layout/_sidebar.scss
+++ b/frontend/css/layout/_sidebar.scss
@@ -102,6 +102,8 @@
   display: flex;
   flex-direction: column;
 
+  position: relative;
+
   overflow-x: hidden;
   overflow-y: auto;
 
